# performance-utils

./: .gitignore  README.md  compile-rs.bat  setup.py
py-src/: pandas.py  polars.py
research/: research-gpt-2.md  research-gpt.md
rs-dev/: Cargo.toml
rs-dev/src/: main.rs
rs-helper/: Cargo.toml  develop.bat
rs-helper/src/: lib.rs
scripts/: isolate.py  rs-dev.py  rs-fake-data.py
scripts/times/: pandas_time.txt  rust_pl_time.txt  rust_time.txt  rust_time_pu.txt
src/: pandas.py
